; ModuleID = '/home/carl/AnghaBench/kphp-kdb/kfs/extr_kfs.c_cmp_file_info.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/kfs/extr_kfs.c_cmp_file_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kfs_file_info = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kfs_file_info*, %struct.kfs_file_info*)* @cmp_file_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_file_info(%struct.kfs_file_info* %0, %struct.kfs_file_info* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.kfs_file_info*, align 8
  %5 = alloca %struct.kfs_file_info*, align 8
  store %struct.kfs_file_info* %0, %struct.kfs_file_info** %4, align 8
  store %struct.kfs_file_info* %1, %struct.kfs_file_info** %5, align 8
  %6 = load %struct.kfs_file_info*, %struct.kfs_file_info** %4, align 8
  %7 = getelementptr inbounds %struct.kfs_file_info, %struct.kfs_file_info* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.kfs_file_info*, %struct.kfs_file_info** %5, align 8
  %10 = getelementptr inbounds %struct.kfs_file_info, %struct.kfs_file_info* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp slt i64 %8, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %31

14:                                               ; preds = %2
  %15 = load %struct.kfs_file_info*, %struct.kfs_file_info** %4, align 8
  %16 = getelementptr inbounds %struct.kfs_file_info, %struct.kfs_file_info* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.kfs_file_info*, %struct.kfs_file_info** %5, align 8
  %19 = getelementptr inbounds %struct.kfs_file_info, %struct.kfs_file_info* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp sgt i64 %17, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %14
  store i32 1, i32* %3, align 4
  br label %31

23:                                               ; preds = %14
  %24 = load %struct.kfs_file_info*, %struct.kfs_file_info** %4, align 8
  %25 = getelementptr inbounds %struct.kfs_file_info, %struct.kfs_file_info* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = load %struct.kfs_file_info*, %struct.kfs_file_info** %5, align 8
  %28 = getelementptr inbounds %struct.kfs_file_info, %struct.kfs_file_info* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = call i32 @strcmp(i32 %26, i32 %29)
  store i32 %30, i32* %3, align 4
  br label %31

31:                                               ; preds = %23, %22, %13
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @strcmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
